# XWCToolkit

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  conanfile.py  xwc_git_version.h
INDI/: CMakeLists.txt
INDI/libcommon/: CMakeLists.txt
INDI/liblilxml/: CMakeLists.txt
XWC/: CMakeLists.txt
XWC/app/dev/: outletController.hpp
XWC/logger/: logManager.hpp  logMap.hpp
XWC/logger/types/: telem.cpp
XWCTK/: CMakeLists.txt  libMagAOX.hpp  libXWCTk.hpp
XWCTK/app/: MagAOXApp.hpp  XWCTkApp.cpp  XWCTkApp.hpp  indiDriver.hpp  indiMacros.hpp  indiUtils.hpp  semUtils.hpp  stateCodes.cpp  stateCodes.hpp
XWCTK/app/dev/: dm.hpp  dmPokeWFS.hpp  dssShutter.hpp  edtCamera.hpp  frameGrabber.hpp  ioDevice.cpp  ioDevice.hpp  outletController.cpp  outletController.hpp  semUtilsDerived.hpp  shmimMonitor.hpp  stdCamera.cpp  stdCamera.hpp  stdMotionStage.hpp  telemeter.hpp
XWCTK/app/dev/tests/: outletController_test.cpp
XWCTK/app/tests/: MagAOXApp_test.cpp  indiUtils_test.cpp
XWCTK/common/: config.hpp  defaults.hpp  environment.hpp  paths.hpp
XWCTK/common/doc/: common.dox
XWCTK/doc/: groups.dox
XWCTK/logger/: logBinarySchemata.cpp  logBinarySchemata.hpp  logFileName.cpp  logFileName.hpp  logFileRaw.cpp  logFileRaw.hpp  logManager.cpp  logManager.hpp  logMap.cpp  logMap.hpp  logMeta.cpp  logMeta.hpp
XWCTK/logger/doc/: logger.dox  telemeter.dox
XWCTK/logger/types/: config_log.hpp  empty_log.hpp  flatbuffer_log.hpp  git_state.hpp  indidriver_start.hpp  indidriver_stop.hpp  loop_closed.hpp  loop_open.hpp  loop_paused.hpp  observer.hpp  ocam_temps.hpp  outlet_channel_state.hpp  outlet_state.hpp  pico_channel.hpp  saving_start.hpp  saving_state_change.hpp  saving_stop.hpp  software_log.hpp  state_change.hpp  string_log.hpp  telem.cpp  telem_blockgains.hpp  telem_chrony_stats.hpp  telem_chrony_status.hpp  telem_cooler.hpp  telem_coreloads.hpp  telem_coretemps.hpp  telem_dmmodes.hpp  telem_dmspeck.hpp  telem_drivetemps.hpp  telem_fgtimings.hpp  telem_fxngen.hpp  telem_loopgain.hpp  telem_observer.hpp  telem_pi335.hpp  telem_pico.hpp  telem_pokecenter.hpp  telem_pokeloop.hpp  telem_position.hpp  telem_rhusb.hpp  (+16 more)
XWCTK/logger/types/schemas/: config_log.fbs  git_state.fbs  observer.fbs  ocam_temps.fbs  outlet_channel_state.fbs  outlet_state.fbs  pico_channel.fbs  saving_state_change.fbs  software_log.fbs  state_change.fbs  string_log.fbs  telem_blockgains.fbs  telem_chrony_stats.fbs  telem_chrony_status.fbs  telem_cooler.fbs  telem_coreloads.fbs  telem_coretemps.fbs  telem_dmmodes.fbs  telem_dmspeck.fbs  telem_drivetemps.fbs  telem_fgtimings.fbs  telem_fxngen.fbs  telem_loopgain.fbs  telem_observer.fbs  telem_pi335.fbs  telem_pico.fbs  telem_pokecenter.fbs  telem_pokeloop.fbs  telem_position.fbs  telem_rhusb.fbs  telem_saving.fbs  telem_stage.fbs  telem_stdcam.fbs  telem_telcat.fbs  telem_teldata.fbs  telem_telenv.fbs  telem_telpos.fbs  telem_telsee.fbs  telem_telvane.fbs  telem_temps.fbs  (+4 more)
XWCTK/modbus/: modbus.hpp  modbus_exception.hpp
XWCTK/sys/: runCommand.cpp  runCommand.hpp  thSetuid.cpp  thSetuid.hpp
XWCTK/sys/tests/: thSetuid_test.cpp
XWCTK/tty/: netSerial.cpp  netSerial.hpp  telnetConn.cpp  telnetConn.hpp  ttyErrors.cpp  ttyErrors.hpp  ttyIOUtils.cpp  ttyIOUtils.hpp  ttyUSB.cpp  ttyUSB.hpp  usbDevice.cpp  usbDevice.hpp
XWCTK/tty/tests/: ttyIOUtils_test.cpp
XWCTK/utils/: H5Utils.hpp
cmake/: common.cmake  macros.cmake
flatlogs/: CMakeLists.txt
lib/: CMakeLists.txt
lib/INDI/: CMakeLists.txt
lib/INDI/INDI/: CMakeLists.txt
lib/INDI/libcommon/: CMakeLists.txt  IndiDriver.cpp  README.md
lib/INDI/liblilxml/: CMakeLists.txt  README.md
lib/INDI/xindidriver/: CMakeLists.txt
lib/flatlogs/: CMakeLists.txt
lib/flatlogs/include/flatlogs/: logPriority.hpp
lib/flatlogs/src/: flatlogcodes.cpp
lib/libtelnet/: CMakeLists.txt
libMagAOX/: CMakeLists.txt  Makefile
libMagAOX/tty/: telnetConn.hpp
src/: CMakeLists.txt
src/app/: MagAOXApp.hpp  indiDriver.hpp
src/app/dev/: outletController.hpp  shmimMonitor.hpp
utils/: CMakeLists.txt
utils/cursesINDI/: CMakeLists.txt  cursesINDI.hpp
utils/instGraph/: CMakeLists.txt  instGraph.cpp  instGraph.hpp
utils/instGraph/xigNodes/: fsmNode.hpp  pwrOnOffNode.hpp  stdMotionNode.hpp  xigNode.hpp
utils/logdump/: CMakeLists.txt  logdump.cpp  logdump.hpp
utils/logstream/: CMakeLists.txt  logstream.cpp  logstream.hpp
utils/logsurgeon/: CMakeLists.txt  logsurgeon.cpp  logsurgeon.hpp
utils/xindiserver/: CMakeLists.txt  xindiserver.hpp
utils/xrif2fits/: CMakeLists.txt  xrif2fits.hpp
utils/xrif2shmim/: CMakeLists.txt  xrif2shmim.hpp
